fix z-index on autocomplete list

--- a/css/style.css
+++ b/css/style.css
@@ -150,6 +150,7 @@ input[type=text]:hover {
 
 .ui-widget {
     font-size: 0.7em !important;
+    z-index: 2000 !important;
 }
 
 .ui-widget-content {
